ORC-94. Remove obsolete MaxPermSize from pom file. (omalley)
Signed-off-by: Owen O'Malley <omalley@apache.org>